--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,7 +1,7 @@
 parameters:
     level: 5
 
-    checkMissingIterableValueType: true
+    checkMissingIterableValueType: false
 
     paths:
         - /source/src
@@ -11,4 +11,4 @@ parameters:
         - /source/src
     excludes_analyse:
         - vendor
-        - /source/src/core/libs
+        - /source/src/libs
