--- a/plugin.yml
+++ b/plugin.yml
@@ -2,6 +2,6 @@ name: CryticOpFactins
 author: MakerbakerYT
 main: core\Cryptic
 load: POSTWORLD
-version: "1.0.0"
-api: 4.0.0
+version: "1.2.4"
+api: 4.0.0, 3.0.0
 description: A OP factions core for CrypticPE.
